--- a/voluntariadodb/build.gradle
+++ b/voluntariadodb/build.gradle
@@ -1,3 +1,6 @@
+compile group: 'org.sql2o', name: 'sql2o', version: '1.6.0'     
+compile 'org.postgresql:postgresql:42.2.5'
+
 plugins {
 	id 'org.springframework.boot' version '2.4.6'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
