--- a/voluntariadodb/build.gradle
+++ b/voluntariadodb/build.gradle
@@ -16,6 +16,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation group: 'org.sql2o', name: 'sql2o', version: '1.6.0'
 	implementation 'org.postgresql:postgresql:42.2.5'
+	implementation group: 'net.postgis', name: 'postgis-jdbc', version: '2.5.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
